@@ -1,9 +1,0 @@
-#!perl -T
-
-use Test::More tests => 1;
-
-BEGIN {
-	use_ok( 'Media::Type::Simple' );
-}
-
-diag( "Testing Media::Type::Simple $Media::Type::Simple::VERSION, Perl $], $^X" );
